# BitcoinArmory

./: .gitignore  ArmoryQt.py  ArmorySetup.nsi  BIP150_151.md  BitcoinArmory.spec.in  CMakeLists.txt  LICENSE  LICENSE-MIT  LICENSE.py  Makefile  Makefile.am  README.md  README_ArmoryDB.md  README_BIP150KeyManager.md  README_OSX.md  README_WebSocket.md  README_macOS.md  SDM.py  _config.yml  about.md  announcefetch.py  armorycolors.py  armoryd.py  armorymodels.py  changelog.txt  configure.ac  dynamicImport.py  guardian.py  imgList.rcc  jasvet.py  qtdefines.py  qtdialogs.py  setup.py  update_version.py  writeNSISCompilerArgs.py
armoryengine/: ALL.py  AddressUtils.py  ArmoryUtils.py  AsciiSerialize.py  BDM.py  BIP15x.py  BinaryPacker.py  BinaryUnpacker.py  Block.py  CoinSelection.py  CppBridge.py  CppWalletMirroring.py  Decorators.py  MultiSigUtils.py  Networking.py  ProcessMutex.py  PyBtcAddress.py  PyBtcWallet.py  PyBtcWalletRecovery.py  Script.py  Settings.py  SignerWrapper.py  Timer.py  Transaction.py  UserAddressUtils.py  VersionUtils.py  WalletUtils.py  cppyyWrapper.py
c20p1305_cffi/: c20p1305_cffi.py
cppForSwig/: Addresses.h  ArmoryConfig.cpp  ArmoryConfig.h  Assets.h  AsyncClient.cpp  AsyncClient.h  BDM_Server.cpp  BDM_Server.h  BDM_mainthread.cpp  BDM_mainthread.h  BDM_seder.cpp  BDM_seder.h  BDM_supportClasses.cpp  BDM_supportClasses.h  BDV_Notification.h  BIP150_151.cpp  BIP150_151.h  BIP151.cpp  BIP151.h  BIP15x_Handshake.cpp  BIP15x_Handshake.h  BIP32_Node.cpp  BinaryData.cpp  BinaryData.h  BitcoinArmory.sln  BitcoinP2P.cpp  BitcoinP2p.h  BlockDataManagerConfig.cpp  BlockDataManagerConfig.h  BlockDataMap.cpp  BlockDataMap.h  BlockDataViewer.cpp  BlockDataViewer.h  BlockObj.cpp  BlockObj.h  BlockUtils.cpp  BlockUtils.h  Blockchain.cpp  Blockchain.h  BlockchainScanner.cpp  (+111 more)
cppForSwig/BDM_Client/: BDM_Client.vcxproj  build_installer_64.bat
cppForSwig/BlockchainDatabase/: BlockDataMap.cpp  BlockDataMap.h  BlockObj.h  BlockUtils.cpp  BlockUtils.h  Blockchain.cpp  Blockchain.h  BlockchainScanner.cpp  BlockchainScanner.h  BlockchainScanner_Super.cpp  BlockchainScanner_Super.h  DatabaseBuilder.cpp  DatabaseBuilder.h  ScrAddrFilter.cpp  ScrAddrFilter.h  SshParser.cpp  SshParser.h  StoredBlockObj.h  TxHashFilters.h  lmdb_wrapper.cpp  lmdb_wrapper.h
cppForSwig/BridgeAPI/: BridgeMain.cpp  BridgeSocket.cpp  BridgeSocket.h  CppBridge.cpp  CppBridge.h  PassphrasePrompt.cpp  PassphrasePrompt.h  ProtoCommandParser.cpp  ProtoCommandParser.h  ProtobufCommandParser.cpp  WalletManager.cpp  WalletManager.h
cppForSwig/Signer/: LegacySigner.h  ResolverFeed.cpp  ResolverFeed.h  ResolverFeed_Wallets.cpp  ResolverFeed_Wallets.h  Script.cpp  Script.h  ScriptRecipient.cpp  ScriptRecipient.h  SigHashEnum.h  Signer.cpp  Signer.h  Transactions.cpp  Transactions.h  TxEvalState.cpp  TxEvalState.h
cppForSwig/Wallets/: Addresses.cpp  Addresses.h  AssetEncryption.cpp  AssetEncryption.h  Assets.cpp  Assets.h  AuthorizedPeers.cpp  AuthorizedPeers.h  DecryptedDataContainer.cpp  DecryptedDataContainer.h  DerivationScheme.cpp  EncryptedDB.h  IOHeader.h  KDF.cpp  KDF.h  Progress.cpp  Progress.h  WalletFileInterface.cpp  WalletFileInterface.h  WalletHeader.cpp  WalletHeader.h  WalletIdTypes.cpp  WalletIdTypes.h  Wallets.cpp  Wallets.h  random_buffer.c
cppForSwig/Wallets/Accounts/: AddressAccounts.cpp  AddressAccounts.h
cppForSwig/Wallets/Seeds/: Backups.cpp  Backups.h  Seeds.cpp
cppForSwig/capnp/: BDV.capnp  Bridge.capnp  Signer.capnp  Types.capnp
cppForSwig/ccan/: Makefile.am  Makefile.bench.include  Makefile.tests.include  config.h
cppForSwig/chacha20poly1305/: Makefile.am
cppForSwig/cryptopp/: DetSign.cpp  DetSign.h  Makefile  configure.ac
cppForSwig/gtest/: BIP151RekeyTest.cpp  CMakeLists.txt  ContainerTests.cpp  CppBlockUtilsTests.cpp  DB1kIterTest.cpp  Makefile.am  MockedNode.cpp  MockedNode.h  NodeUnitTest.cpp  NodeUnitTest.h  SignerTests.cpp  SupernodeTests.cpp  TestUtils.cpp  TestUtils.h  UtilsTests.cpp  WalletTests.cpp  ZeroConfTests.cpp  computecov.sh
cppForSwig/guardian/: guardian.cpp
cppForSwig/hkdf/: CMakeLists.txt
cppForSwig/leveldb_windows_port/win32_posix/: Win_TranslatePath.cpp  pthread_win32port.cpp
cppForSwig/lmdb/: Makefile.am  lmdbpp.cpp  lmdbpp.h
cppForSwig/lmdbpp/: lmdbpp.cpp  lmdbpp.h
cppForSwig/protobuf/: BDV.capnp
cppForSwig/protobuf_win/: protobuf_win.vcxproj
docs/: FAQ.md
dpkgfiles/: controlarmhf  copyright  make_deb_package.py  rules
extras/: BDMbasics_watchBalance.py  PromoKit.py  armoryengine_basics.py  extractKeysFromWallet.py  genPrivPubKeyPair.py  getVersionString.py  maketarball  manually_import_500k_addr.py  sample_armory_code.py  sign_dl_list.py  verify_dl_list.py
guitest/: testMainWindow.py
lang/: armory_da.ts  armory_de.ts  armory_el.ts  armory_en.ts  armory_es.ts  armory_fr.ts  armory_he.ts  armory_hr.ts  armory_id.ts  armory_ru.ts  armory_sv.ts
linuxbuild/: Linux_build_notes.md  README.md
osxbuild/: Armory-script.sh  OSX_build_notes.md  README.md  armoryd-script.sh  build-app.py  macOS_build_notes.md  qmake_LFLAGS.patch
po/: is.po
pytest/: SendTx.py  Tiab.py  testAnnounce.py  testArmoryD.py  testArmoryDStartup.py  testArmoryDTiab.py  testArmoryEngineUtils.py  testDecorators.py  testFragmentedBackup.py  testJasvet.py  testMultisig.py  testParseAnnounce.py  testPyBtcAddress.py  testPyBtcWallet.py  testPyBtcWalletRecovery.py  testPyTX.py  testSigning.py  testSplitSecret.py  testUserAddress.py  testUtility.py
qtdialogs/: ArmoryDialog.py  DlgAddressBook.py  DlgAddressInfo.py  DlgBackupCenter.py  DlgBrowserWarn.py  DlgChangePassphrase.py  DlgConfirmSend.py  DlgCorruptWallet.py  DlgDispTxInfo.py  DlgEULA.py  DlgExportTxHistory.py  DlgHelpAbout.py  DlgIntroMessage.py  DlgKeypoolSettings.py  DlgMigrateWallet.py  DlgNewAddress.py  DlgOfflineTx.py  DlgPasswd3.py  DlgProgress.py  DlgQRCodeDisplay.py  DlgReplaceWallet.py  DlgRequestPayment.py  DlgRestore.py  DlgSendBitcoins.py  DlgSetComment.py  DlgSettings.py  DlgShowKeyList.py  DlgUniversalRestoreSelect.py  DlgUnlockWallet.py  DlgUriCopyAndPaste.py  DlgWalletDetails.py  (+7 more)
(+40 files in other folders)
